--- a/shaker-nav.html
+++ b/shaker-nav.html
@@ -19,6 +19,17 @@
         }
         this.shadow.appendChild(templateContent);
     };
+
+    ShakerNavProto.attachedCallback = function(){
+        var shakerNav = document.querySelector('shaker-nav');
+        shakerNav.setNavElements = function(navelements){
+            this.setAttribute('data-navelements',JSON.stringify(navelements));
+        };
+        shakerNav.setTitle = function(title){
+            this.setAttribute('data-title', title);
+        };
+    };
+
     ShakerNavProto.attributeChangedCallback = function(attrName, oldVal, newVal){
         switch(attrName){
             case "data-title":          this.shadow.querySelector('.mdl-layout-title').innerHTML = newVal;
