--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8"/>
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="bower_components/material-design-lite/material.min.css">
-    <link rel="import" href="shaker-nav.html" />
-    <script src="bower_components/material-design-lite/material.min.js"></script>
+    <link rel="import" href="shaker-sidenav.html" />
+    <!--script src="bower_components/material-design-lite/material.min.js"></script-->
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <script src="shakerNavController.js"></script>
 </head>
 <body>
-    <shaker-nav id="first"></shaker-nav>
-    <shaker-nav id="second"></shaker-nav>
+    <shaker-sidenav id="first"></shaker-sidenav>
+    <shaker-sidenav id="second"></shaker-sidenav>
 </body>
 </html>
