--- a/shaker-sidenav.html
+++ b/shaker-sidenav.html
@@ -6,7 +6,7 @@
     ShakerSidenavProto.createdCallback = function(){
         var shadow = this.createShadowRoot();
         this.shadows[this.id] = shadow;
-        var importDocument = document.querySelector('link[rel="import"]').import;
+        var importDocument = document.querySelector('#shaker-sidenav').import;
         var template = importDocument.querySelector('#shaker-sidenav');
         var templateContent = document.importNode(template.content, true);
         shadow.appendChild(templateContent);
@@ -25,13 +25,15 @@
             nav.innerHTML = navElementsString;
         };
         shakerSidenav.setTitle = function(title2){
-            title.innerHTML = title2;
+            title.innerText = title2;
         };
         shakerSidenav.addNavElement = function(navElement){
             nav.innerHTML += "<a class='mdl-navigation__link' href='"+navElement.href+"'>"+navElement.label+"<\a>";
         };
         shakerSidenav.clearNavElements = function(){
-            nav.innerHTML = "";
+            while (nav.firstChild) {
+                nav.removeChild(nav.firstChild);
+            }
         };
     };
 
