adding shaker-header, have to tackle alignment between components

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="bower_components/material-design-lite/material.min.css">
     <link rel="import" href="shaker-sidenav.html" id="shaker-sidenav"/>
-    <!--script src="bower_components/material-design-lite/material.min.js"></script-->
+    <script src="bower_components/material-design-lite/material.min.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <script src="shakerNavController.js"></script>
 </head>
 <body>
-    <shaker-sidenav id="first"></shaker-sidenav>
+    <shaker-sidenav id="first" style="top: 64px;"></shaker-sidenav>
+
+
 </body>
 </html>
