bundled component into separate folders

--- a/shaker-sidenav/shaker-sidenav.html
+++ b/shaker-sidenav/shaker-sidenav.html
@@ -155,11 +155,11 @@
             font-weight: 400;
             line-height: 24px;
             letter-spacing: 0;
-            opacity: 0.87; }
+            opacity: 0.87;
+            font-family: "Helvetica", "Arial", sans-serif;  }
 
         .mdl-navigation__link .material-icons {
             vertical-align: middle; }
-
 
     </style>
 </template>
