--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="bower_components/material-design-lite/material.min.css">
-    <link rel="import" href="shaker-sidenav.html" id="shaker-sidenav"/>
+    <link rel="import" href="shaker-sidenav/shaker-sidenav.html" id="shaker-sidenav"/>
     <script src="bower_components/material-design-lite/material.min.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <script src="shakerNavController.js"></script>
