--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8"/>
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="bower_components/material-design-lite/material.min.css">
-    <link rel="import" href="shaker-sidenav-link/shaker-sidenav-link.html" id="shaker-sidenav-link"/>
-    <link rel="import" href="shaker-sidenav/shaker-sidenav.html" id="shaker-sidenav"/>
+    <link rel="import" href="components/shaker-sidenav-title/shaker-sidenav-title.html" id="shaker-sidenav-title"/>
+    <link rel="import" href="components/shaker-sidenav-link/shaker-sidenav-link.html" id="shaker-sidenav-link"/>
+    <link rel="import" href="components/shaker-sidenav/shaker-sidenav.html" id="shaker-sidenav"/>
     <script src="bower_components/material-design-lite/material.min.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
 </head>
 <body>
     <shaker-sidenav id="first" style="top: 64px;">
+        <shaker-sidenav-title>Shaker Tech</shaker-sidenav-title>
         <shaker-sidenav-link href="#about">About</shaker-sidenav-link>
         <shaker-sidenav-link href="#demos">Demos</shaker-sidenav-link>
         <shaker-sidenav-link href="#contactus">Contact Us</shaker-sidenav-link>
