--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Test</title>
-    <link rel="stylesheet" type="text/css" href="bower_components/material-design-lite/material.min.css"/>
+    <link rel="stylesheet" type="text/css" href="bower_components/material-design-lite/material.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
     <link rel="import" href="components/templates/shaker-navlink.html" id="shaker-navlink"/>
     <link rel="import" href="components/shaker-header-link/shaker-header-link.html" id="shaker-header-link"/>
     <link rel="import" href="components/shaker-sidenav-link/shaker-sidenav-link.html" id="shaker-sidenav-link"/>
-    <link rel="import" href="components/shaker-headernav/shaker-headernav.html" id="shaker-headernav"/>
+    <link rel="import" href="components/shaker-header-nav/shaker-header-nav.html" id="shaker-header-nav"/>
     <link rel="import" href="components/shaker-title/shaker-title.html" id="shaker-title"/>
     <link rel="import" href="components/shaker-sidenav-title/shaker-sidenav-title.html" id="shaker-sidenav-title"/>
     <link rel="import" href="components/shaker-sidenav/shaker-sidenav.html" id="shaker-sidenav"/>
@@ -18,13 +19,27 @@
 <body>
     <shaker-header>
         <shaker-title>Test2</shaker-title>
-        <shaker-header-link href="#test">Test</shaker-header-link>
     </shaker-header>
-    <shaker-sidenav id="first" style="top: 64px;">
+    <!--shaker-sidenav id="first" style="top: 64px;">
         <shaker-sidenav-title>Shaker Tech</shaker-sidenav-title>
         <shaker-sidenav-link href="#about">About</shaker-sidenav-link>
         <shaker-sidenav-link href="#demos">Demos</shaker-sidenav-link>
         <shaker-sidenav-link href="#contactus">Contact Us</shaker-sidenav-link>
-    </shaker-sidenav>
+    </shaker-sidenav-->
+    <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+            <!-- Title -->
+            <span class="mdl-layout-title">Test1</span>
+            <!-- Add spacer, to align navigation to the right -->
+            <div class="mdl-layout-spacer"></div>
+            <!-- Navigation. We hide it in small screens. -->
+            <nav class="mdl-navigation mdl-layout--large-screen-only">
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
