got the headernav to work, will probably refactor stuff here and there, dev a few more components then work on the extensibility

--- a/index.html
+++ b/index.html
@@ -18,28 +18,17 @@
 </head>
 <body>
     <shaker-header>
-        <shaker-title>Test2</shaker-title>
+        <shaker-title>Shaker Tech</shaker-title>
+        <shaker-header-link href="#link">Link</shaker-header-link>
+        <shaker-header-link href="#link">Link</shaker-header-link>
+        <shaker-header-link href="#link">Link</shaker-header-link>
+        <shaker-header-link href="#link">Link</shaker-header-link>
     </shaker-header>
-    <!--shaker-sidenav id="first" style="top: 64px;">
-        <shaker-sidenav-title>Shaker Tech</shaker-sidenav-title>
+    <shaker-sidenav id="first" style="top: 64px;">
+        <shaker-sidenav-title>Navigation</shaker-sidenav-title>
         <shaker-sidenav-link href="#about">About</shaker-sidenav-link>
         <shaker-sidenav-link href="#demos">Demos</shaker-sidenav-link>
         <shaker-sidenav-link href="#contactus">Contact Us</shaker-sidenav-link>
-    </shaker-sidenav-->
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <!-- Title -->
-            <span class="mdl-layout-title">Test1</span>
-            <!-- Add spacer, to align navigation to the right -->
-            <div class="mdl-layout-spacer"></div>
-            <!-- Navigation. We hide it in small screens. -->
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-            </nav>
-        </div>
-    </header>
+    </shaker-sidenav>
 </body>
 </html>
