refactored all code to create custom elements into one function as the code was getting redundant, now the javascript takes one line in each imported html :)

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="bower_components/material-design-lite/material.css"/>
     <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
-    <link rel="import" href="components/templates/shaker-navlink.html" id="shaker-navlink"/>
-    <link rel="import" href="components/shaker-header-link/shaker-header-link.html" id="shaker-header-link"/>
-    <link rel="import" href="components/shaker-sidenav-link/shaker-sidenav-link.html" id="shaker-sidenav-link"/>
-    <link rel="import" href="components/shaker-header-nav/shaker-header-nav.html" id="shaker-header-nav"/>
-    <link rel="import" href="components/shaker-title/shaker-title.html" id="shaker-title"/>
-    <link rel="import" href="components/shaker-sidenav-title/shaker-sidenav-title.html" id="shaker-sidenav-title"/>
-    <link rel="import" href="components/shaker-sidenav/shaker-sidenav.html" id="shaker-sidenav"/>
-    <link rel="import" href="components/shaker-header/shaker-header.html" id="shaker-header" />
-    <script src="bower_components/material-design-lite/material.min.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <script src="scripts/createCustomElement.js"></script>
+    <script src="bower_components/material-design-lite/material.min.js"></script>
+    <link rel="import" href="components/shaker-navlink.html" id="shaker-navlink"/>
+    <link rel="import" href="components/shaker-header-link.html" id="shaker-header-link"/>
+    <link rel="import" href="components/shaker-sidenav-link.html" id="shaker-sidenav-link"/>
+    <link rel="import" href="components/shaker-header-nav.html" id="shaker-header-nav"/>
+    <link rel="import" href="components/shaker-title.html" id="shaker-title"/>
+    <link rel="import" href="components/shaker-sidenav-title.html" id="shaker-sidenav-title"/>
+    <link rel="import" href="components/shaker-sidenav.html" id="shaker-sidenav"/>
+    <link rel="import" href="components/shaker-header.html" id="shaker-header" />
+
 </head>
 <body>
     <shaker-header>
