added container..will most likely wrap the whole thing in a component eventually

--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
         <shaker-sidenav-link href="#demos">Demos</shaker-sidenav-link>
         <shaker-sidenav-link href="#contactus">Contact Us</shaker-sidenav-link>
     </shaker-sidenav>
+    <div class="shaker-container">
+        <p>Content</p>
+    </div>
 </body>
 </html>
