--- a/index.html
+++ b/index.html
@@ -2,37 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Test</title>
+    <title>X-Elements</title>
     <link rel="stylesheet" type="text/css" href="bower_components/material-design-lite/material.css"/>
     <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <script src="scripts/createCustomElement.js"></script>
     <script src="bower_components/material-design-lite/material.min.js"></script>
-    <link rel="import" href="components/shaker-navlink.html" id="shaker-navlink"/>
-    <link rel="import" href="components/shaker-header-link.html" id="shaker-header-link"/>
-    <link rel="import" href="components/shaker-sidenav-link.html" id="shaker-sidenav-link"/>
-    <link rel="import" href="components/shaker-header-nav.html" id="shaker-header-nav"/>
-    <link rel="import" href="components/shaker-title.html" id="shaker-title"/>
-    <link rel="import" href="components/shaker-sidenav-title.html" id="shaker-sidenav-title"/>
-    <link rel="import" href="components/shaker-sidenav.html" id="shaker-sidenav"/>
-    <link rel="import" href="components/shaker-header.html" id="shaker-header" />
+    <link rel="import" href="components/x-navlink.html" id="x-navlink"/>
+    <link rel="import" href="components/x-header-link.html" id="x-header-link"/>
+    <link rel="import" href="components/x-sidenav-link.html" id="x-sidenav-link"/>
+    <link rel="import" href="components/x-header-nav.html" id="x-header-nav"/>
+    <link rel="import" href="components/x-title.html" id="x-title"/>
+    <link rel="import" href="components/x-sidenav-title.html" id="x-sidenav-title"/>
+    <link rel="import" href="components/x-sidenav.html" id="x-sidenav"/>
+    <link rel="import" href="components/x-header.html" id="x-header" />
 
 </head>
 <body>
-    <shaker-header>
-        <shaker-title>Shaker Tech</shaker-title>
-        <shaker-header-link href="#link">Link</shaker-header-link>
-        <shaker-header-link href="#link">Link</shaker-header-link>
-        <shaker-header-link href="#link">Link</shaker-header-link>
-        <shaker-header-link href="#link">Link</shaker-header-link>
-    </shaker-header>
-    <shaker-sidenav id="first" style="top: 64px;">
-        <shaker-sidenav-title>Navigation</shaker-sidenav-title>
-        <shaker-sidenav-link href="#about">About</shaker-sidenav-link>
-        <shaker-sidenav-link href="#demos">Demos</shaker-sidenav-link>
-        <shaker-sidenav-link href="#contactus">Contact Us</shaker-sidenav-link>
-    </shaker-sidenav>
-    <div class="shaker-container">
+    <x-header>
+        <x-title>X-Elements</x-title>
+        <x-header-link href="#link">Link</x-header-link>
+        <x-header-link href="#link">Link</x-header-link>
+        <x-header-link href="#link">Link</x-header-link>
+        <x-header-link href="#link">Link</x-header-link>
+    </x-header>
+    <x-sidenav id="first" style="top: 64px;">
+        <x-sidenav-title>Navigation</x-sidenav-title>
+        <x-sidenav-link href="#about">About</x-sidenav-link>
+        <x-sidenav-link href="#demos">Demos</x-sidenav-link>
+        <x-sidenav-link href="#contactus">Contact Us</x-sidenav-link>
+    </x-sidenav>
+    <div class="x-container">
         <p>Content</p>
     </div>
 </body>
