minified my js and renamed function

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="bower_components/material-design-lite/material.css"/>
     <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <script src="scripts/createCustomElement.js"></script>
+    <script src="scripts/customelement/customelement.min.js"></script>
     <script src="bower_components/material-design-lite/material.min.js"></script>
     <link rel="import" href="components/x-navlink.html" id="x-navlink"/>
     <link rel="import" href="components/x-header-link.html" id="x-header-link"/>
