changed sidenav not to have an id anymore

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <x-header-link href="#link">Link</x-header-link>
         <x-header-link href="#link">Link</x-header-link>
     </x-header>
-    <x-sidenav id="first" style="top: 64px;">
+    <x-sidenav style="top: 64px;">
         <x-sidenav-title>Navigation</x-sidenav-title>
         <x-sidenav-link href="#about">About</x-sidenav-link>
         <x-sidenav-link href="#demos">Demos</x-sidenav-link>
